--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.6",
     "@types/express": "^4.17.7",
     "@types/pg": "^7.14.4",
     "concurrently": "^5.2.0",
@@ -18,6 +19,7 @@
     "typescript": "^3.9.7"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "pg": "^8.3.0"
   }
